[#3083] Configure application wide Clock (#4592)
- allows to get/set clock on a central util class without directly
working with a static field
- adjusted all tests
- introduced timestamp-less constructor so only GenericEventMessage
needs to know about the clock

This Pr resolves #3083.